<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:barrierAllowsGoneWidgets="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".todocreate.TodoCreateActivity">

        <TextView
            android:id="@+id/action_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:fontFamily="@font/font"
            android:includeFontPadding="false"
            android:padding="10dp"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/createTodoBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/action_bar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/topView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/glStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="30dp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideEnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="30dp" />

                <TextView
                    android:id="@+id/txt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:padding="10dp"
                    android:text="@string/todo"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5"
                    app:layout_constraintVertical_chainStyle="spread_inside" />

                <TextView
                    android:id="@+id/txtUserName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:padding="10dp"
                    android:text="@string/title"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/editTitle"
                    app:layout_constraintEnd_toStartOf="@+id/txtSalary"
                    app:layout_constraintStart_toStartOf="@+id/glStart"
                    app:layout_constraintTop_toBottomOf="@+id/txt" />

                <TextView
                    android:id="@+id/txtSalary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:padding="10dp"
                    android:text="@string/salary"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="@+id/txtUserName"
                    app:layout_constraintBottom_toTopOf="@+id/editTitle"
                    app:layout_constraintEnd_toEndOf="@id/guideEnd"
                    app:layout_constraintStart_toEndOf="@+id/txtUserName"
                    app:layout_constraintTop_toTopOf="@+id/txtUserName"
                    app:layout_constraintVertical_bias="0.0" />

                <EditText
                    android:id="@+id/editTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/ripple_effect_edit"
                    android:fontFamily="@font/font"
                    android:hint="@string/title"
                    android:includeFontPadding="false"
                    android:inputType="text"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toTopOf="@+id/txtPasswordName"
                    app:layout_constraintEnd_toStartOf="@+id/editSalary"
                    app:layout_constraintStart_toStartOf="@+id/glStart"
                    app:layout_constraintTop_toBottomOf="@+id/txtUserName" />

                <EditText
                    android:id="@+id/editSalary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/ripple_effect_edit"
                    android:fontFamily="@font/font"
                    android:hint="@string/salary"
                    android:includeFontPadding="false"
                    android:inputType="number"
                    android:maxLength="5"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toTopOf="@+id/txtPasswordName"
                    app:layout_constraintEnd_toStartOf="@+id/guideEnd"
                    app:layout_constraintStart_toEndOf="@+id/editTitle" />

                <TextView
                    android:id="@+id/txtPasswordName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/font"
                    android:includeFontPadding="false"
                    android:padding="10dp"
                    android:text="@string/desc"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/editDescription"
                    app:layout_constraintEnd_toStartOf="@+id/guideEnd"
                    app:layout_constraintStart_toStartOf="@+id/glStart"
                    app:layout_constraintTop_toBottomOf="@+id/editTitle" />

                <EditText
                    android:id="@+id/editDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/ripple_effect_edit"
                    android:fontFamily="@font/font"
                    android:hint="@string/desc"
                    android:includeFontPadding="false"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toTopOf="@+id/txtTypeName"
                    app:layout_constraintEnd_toStartOf="@+id/guideEnd"
                    app:layout_constraintStart_toStartOf="@+id/glStart"
                    app:layout_constraintTop_toBottomOf="@+id/txtPasswordName" />

                <TextView
                    android:id="@+id/txtTypeName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/font"
                    android:includeFontPadding="false"
                    android:padding="10dp"
                    android:text="@string/type"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/radioGroup"
                    app:layout_constraintEnd_toStartOf="@+id/guideEnd"
                    app:layout_constraintStart_toStartOf="@+id/glStart"
                    app:layout_constraintTop_toBottomOf="@+id/editDescription" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="@+id/txtTime"
                    app:layout_constraintEnd_toStartOf="@+id/guideEnd"
                    app:layout_constraintStart_toStartOf="@+id/glStart"
                    app:layout_constraintTop_toBottomOf="@+id/txtTypeName">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/radioDaily"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/font"
                            android:includeFontPadding="false"
                            android:onClick="onRadioButtonClicked"
                            android:text="@string/daily"
                            android:textSize="18sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/radioMonthly"
                            app:layout_constraintHorizontal_chainStyle="packed"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <RadioButton
                            android:id="@+id/radioMonthly"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/font"
                            android:includeFontPadding="false"
                            android:onClick="onRadioButtonClicked"
                            android:text="@string/monthly"
                            android:textSize="18sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/radioYearly"
                            app:layout_constraintStart_toEndOf="@+id/radioDaily"
                            app:layout_constraintTop_toTopOf="parent" />

                        <RadioButton
                            android:id="@+id/radioYearly"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/font"
                            android:includeFontPadding="false"
                            android:onClick="onRadioButtonClicked"
                            android:text="@string/yearly"
                            android:textSize="18sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/radioMonthly"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </RadioGroup>

                <TextView
                    android:id="@+id/txtTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/font"
                    android:includeFontPadding="false"
                    android:padding="10dp"
                    android:text="@string/time"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/editTime"
                    app:layout_constraintEnd_toStartOf="@+id/guideEnd"
                    app:layout_constraintStart_toStartOf="@+id/glStart"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

                <TextView
                    android:id="@+id/editTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/font"
                    android:hint="@string/date_amp_time"
                    android:includeFontPadding="false"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toStartOf="@+id/imageTimePicker"
                    app:layout_constraintStart_toStartOf="@+id/glStart"
                    app:layout_constraintTop_toBottomOf="@+id/txtTime" />

                <ImageView
                    android:id="@+id/imageTimePicker"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="?selectableItemBackgroundBorderless"
                    android:padding="3dp"
                    android:src="@drawable/event"
                    app:layout_constraintBottom_toBottomOf="@+id/editTime"
                    app:layout_constraintEnd_toStartOf="@id/guideEnd"
                    app:layout_constraintStart_toEndOf="@+id/editTime"
                    app:layout_constraintTop_toBottomOf="@+id/txtTime"
                    app:layout_constraintTop_toTopOf="@+id/editTime" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <Button
            android:id="@+id/createTodoBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/ripple_effect"
            android:fontFamily="@font/font"
            android:includeFontPadding="false"
            android:text="@string/save"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>