<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    app:barrierAllowsGoneWidgets="false">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"

        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/careView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:elevation="15dp"
            app:cardCornerRadius="5dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_effect">

                <TextView
                    android:id="@+id/txtTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/font"
                    android:includeFontPadding="false"
                    android:text="@string/title"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/txtTime"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/font"
                    android:includeFontPadding="false"
                    android:text="@string/time"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="@+id/txtTitle"
                    app:layout_constraintBottom_toTopOf="@+id/txtType"
                    app:layout_constraintEnd_toEndOf="@+id/imageDelete"
                    app:layout_constraintStart_toEndOf="@+id/txtTitle"
                    app:layout_constraintTop_toTopOf="@+id/txtTitle" />

                <TextView
                    android:id="@+id/txtDesc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/font"
                    android:includeFontPadding="false"
                    android:text="@string/desc"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/txtType"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

                <TextView
                    android:id="@+id/txtSal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/font"
                    android:includeFontPadding="false"
                    android:text="@string/salary"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toStartOf="@+id/txtSalary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtDesc" />

                <TextView
                    android:id="@+id/txtSalary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/font"
                    android:includeFontPadding="false"
                    android:text="10000"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="@+id/txtSal"
                    app:layout_constraintStart_toEndOf="@+id/txtSal"
                    app:layout_constraintTop_toTopOf="@+id/txtSal" />

                <TextView
                    android:id="@+id/txtType"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/font"
                    android:includeFontPadding="false"
                    android:text="@string/type"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="@id/txtSalary"
                    app:layout_constraintEnd_toStartOf="@+id/imageDelete"
                    app:layout_constraintTop_toBottomOf="@+id/txtTime" />

                <ImageView
                    android:id="@+id/imageDelete"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/delete"
                    android:padding="3dp"
                    android:background="?selectableItemBackgroundBorderless"
                    app:layout_constraintBottom_toBottomOf="@+id/txtType"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/txtTime"
                    app:layout_constraintTop_toTopOf="@+id/txtTime"
                    app:tint="@color/black" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>